<resources>
    <string name="app_name">Group6_HW01</string>
    <string name="Body_Mass_Index" translatable="false">Body Mass Index(BMI)</string>
    <string name="height">Height</string>
    <string name="body_mass_index">Body Mass Index(BMI)</string>
    <string name="lb">lb</string>
    <string name="feet">feet</string>
    <string name="inches">inches</string>
    <string name="calculate">Calculate BMI</string>
    <string name="weight">Weight</string>
    <string name="TextView2">TextView</string>
    <string name="textview">TextView</string>
</resources>
